--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,4 +4,12 @@ sonar.projectName=9.9_Ruby
 sonar.projectVersion=1
 sonar.host.url=http://sonar.cybage.com/ 
 sonar.login=squ_0baca30bc8f475bd45436c85495de3810ae4546f
+sonar.coverage.lcovReportPaths=coverage/lcov.info
+sonar.sources=.
+sonar.tests=spec
+sonar.exclusions=spec/**
+
+sonar.pdf.issue.details=BUG,CODE_SMELL,VULNERABILITY
+sonar.pdf.other.metrics=coverage
+sonar.pdf.skip=false
 
