--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,15 +1,16 @@
 # Project identification
-sonar.projectKey=9.9_Ruby:master
-sonar.projectName=9.9_Ruby
+sonar.projectKey=25.1_Ruby:master
+sonar.projectName=25.1_Ruby
 sonar.projectVersion=1
-sonar.host.url=http://sonar.cybage.com/ 
-sonar.login=squ_0baca30bc8f475bd45436c85495de3810ae4546f
-sonar.coverage.lcovReportPaths=coverage/lcov.info
+sonar.host.url=http://172.27.59.174:9000/
+sonar.token=squ_0baca30bc8f475bd45436c85495de3810ae4546f
 sonar.sources=.
 sonar.tests=spec
-sonar.exclusions=spec/**
+sonar.test.inclusions=**/*_spec.rb
+sonar.exclusions=**/vendor/**
+
+sonar.ruby.coverage.reportPaths=coverage/coverage.json
 
 sonar.pdf.issue.details=BUG,CODE_SMELL,VULNERABILITY
 sonar.pdf.other.metrics=coverage
-sonar.pdf.skip=false
-
+sonar.pdf.skip=true
